Finished Unit 6 Added Walkthrough

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <!-- Paste BOTH strings as required -->
     <string name="back4app_app_id">ovDNRO1nl0kmYu2CU0Y2EQ1xldVTnwOl49a0fd5M</string>
     <string name="back4app_client_key">lwFOVWjfg20rqLG4bEpg8N65cP8vDpiluSwurbQw</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
